--- a/client/config/routes.yaml
+++ b/client/config/routes.yaml
@@ -1,3 +1,21 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+homepage:
+    path: /
+    controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController::redirectAction
+    methods: GET
+    defaults:
+        route: login
+
+login:
+    path: /login
+    controller: App\Controller\LoginController
+    methods: GET|POST
+
+registration:
+    path: /registration
+    controller: App\Controller\RegistrationController
+    methods: GET|POST
+
+users:
+    path: /users
+    controller: App\Controller\RegistrationController
+    methods: GET|POST
