--- a/client/.env
+++ b/client/.env
@@ -19,3 +19,7 @@ APP_SECRET=ec9a899a83971dba5afb2cd4ccb98c19
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
+
+API_HOST=http://api
+API_TOKEN_ENDPOINT=/authentication_token
+API_USER_ENDPOINT=/users
