--- a/client/config/services.yaml
+++ b/client/config/services.yaml
@@ -17,7 +17,7 @@ services:
         resource: '../src/'
         exclude:
             - '../src/DependencyInjection/'
-            - '../src/Entity/'
+            - '../src/Dto/'
             - '../src/Kernel.php'
             - '../src/Tests/'
 
@@ -29,3 +29,12 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Client\ApiClient:
+        arguments:
+            - '%env(API_HOST)%'
+            - '%env(API_TOKEN_ENDPOINT)%'
+
+    App\Client\UserClient:
+        arguments:
+            - '%env(API_USER_ENDPOINT)%'
