--- a/api/config/services.yaml
+++ b/api/config/services.yaml
@@ -32,3 +32,11 @@ services:
         decorates: 'api_platform.swagger.normalizer.documentation'
         arguments: ['@App\Swagger\SwaggerDecorator.inner']
         autoconfigure: false
+
+    user_email_filter:
+        parent: 'api_platform.doctrine.orm.search_filter'
+        arguments: [ { email: exact } ]
+        tags: [ 'api_platform.filter' ]
+        autowire: false
+        autoconfigure: false
+        public: false
