--- a/client/composer.json
+++ b/client/composer.json
@@ -9,9 +9,13 @@
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
         "symfony/http-client": "5.1.*",
-        "symfony/yaml": "5.1.*"
+        "symfony/security-bundle": "5.1.*",
+        "symfony/twig-bundle": "5.1.*",
+        "symfony/yaml": "5.1.*",
+        "twig/twig": "^3.0"
     },
     "require-dev": {
         "symfony/apache-pack": "^1.0"
