Add validation through API

--- a/client/config/routes.yaml
+++ b/client/config/routes.yaml
@@ -10,9 +10,14 @@ login:
     controller: App\Controller\LoginController
     methods: GET|POST
 
+delete_user:
+    path: /users/delete
+    controller: App\Controller\UserController::deleteUser
+    methods: POST
+
 users:
     path: /users/{id}
-    controller: App\Controller\UserController
+    controller: App\Controller\UserController::users
     methods: GET|POST
     defaults:
         id: null
